Created nav bar and completed index.html's nav bar part

--- a/index.html
+++ b/index.html
@@ -31,6 +31,35 @@
 
 </head>
 <body>
-    
+    <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
+        <span>
+            <div id="logo"></div>
+        </span>
+        <a class="navbar-brand" href="#">Person Mangement System</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active" class="links">
+                    <a class="nav-link" href="#nav">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item" class="links">
+                    <a class="nav-link" href="#blog-section">Blog Section</a>
+                </li>
+                <li class="nav-item" class="links">
+                    <a class="nav-link" href="#blog-form">Blog Form</a>
+                </li>
+                <li class="nav-item" class="links">
+                    <a class="nav-link" href="#contact-us">Contact Us</a>
+                </li>
+            </ul>
+            <form id="search-form">
+                <input type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-primary btn-md" type="submit">Search</button>
+            </form>
+    </nav>
 </body>
 </html>
