Added html and css for blog section in main

--- a/index.html
+++ b/index.html
@@ -61,5 +61,13 @@
                 <button class="btn btn-primary btn-md" type="submit">Search</button>
             </form>
     </nav>
+    <main>
+        <section id="blog-section">
+            <h3>Available Users Info...</h3>
+            <div id="container">
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
