Added html and css for blog form section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,6 +31,7 @@
 
 
 </head>
+
 <body>
     <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
         <span>
@@ -68,6 +70,101 @@
             </div>
         </section>
 
+        <section id="blog-form">
+            <h3>Add Person Information...</h3>
+            <br />
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputName">Name</label>
+                    <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        placeholder="Enter name">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputUserName">Username</label>
+                    <input type="text" class="form-control" id="exampleInputUsername" aria-describedby="emailHelp"
+                        placeholder="Enter Username">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email Address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                        else.</small>
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputStreet">Street</label>
+                    <input type="text" class="form-control" id="exampleInputStreet" aria-describedby="emailHelp"
+                        placeholder="Enter Street">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputCity">City</label>
+                    <input type="text" class="form-control" id="exampleInputCity" aria-describedby="emailHelp"
+                        placeholder="Enter City">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputSuite">Suite</label>
+                    <input type="text" class="form-control" id="exampleInputSuite" aria-describedby="emailHelp"
+                        placeholder="Enter Suite">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputZipCode">ZipCode</label>
+                    <input type="number" class="form-control" id="exampleInputZipCode" aria-describedby="emailHelp"
+                        placeholder="Enter ZipCode">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputLattitude">Latitude</label>
+                    <input type="number" class="form-control" id="exampleInputLatitude" aria-describedby="emailHelp"
+                        placeholder="Enter Latitide">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputLongitude">Longitude</label>
+                    <input type="number" class="form-control" id="exampleInputLongitude" aria-describedby="emailHelp"
+                        placeholder="Enter Longitude">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputCompanyName">CompanyName</label>
+                    <input type="text" class="form-control" id="exampleCompanyName" aria-describedby="emailHelp"
+                        placeholder="Enter Company Name">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputUserName">Catch Phrase</label>
+                    <input type="text" class="form-control" id="exampleInputCatchPhrase" aria-describedby="emailHelp"
+                        placeholder="Enter Catch Phrase">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputUserName">Bussiness Info</label>
+                    <input type="text" class="form-control" id="exampleInputBussiness" aria-describedby="emailHelp"
+                        placeholder="Enter Bussiness Info">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputPhoneNumber">Phone Number</label>
+                    <input type="number" class="form-control" id="exampleInputPhoneNumber" aria-describedby="emailHelp"
+                        placeholder="Enter PhoneNumber">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputWebsite">Website</label>
+                    <input type="text" class="form-control" id="exampleInputWebsite" aria-describedby="emailHelp"
+                        placeholder="Enter Website">
+                </div>
+
+                <button id="submit-btn" type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </section>
+
     </main>
 </body>
+
 </html>
